# setun-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: add_test.asm  add_test.trom  fibonacci.asm  fibonacci.trom
src/: lib.rs  main.rs  wasm.rs
src/asm/: assembler.rs  disasm.rs  mod.rs  trom.rs
src/cpu/: decode.rs  execute.rs  memory.rs  mod.rs  registers.rs
src/ternary/: arith.rs  mod.rs  ops.rs  trit.rs  word.rs
src/tui/: app.rs  mod.rs  ui.rs
web/: index.html
