[package]
name = "setun-emu"
version = "0.1.0"
edition = "2021"
description = "A balanced ternary emulator of the Soviet Setun (1958) computer"
license = "MIT"
authors = ["Yigit"]
keywords = ["emulator", "ternary", "setun", "retrocomputing"]
categories = ["emulators", "simulation"]

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# TUI (optional, not available in WASM)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# WASM (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4"

[lib]
name = "setun"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "setun-emu"
path = "src/main.rs"
